--- a/src/app/overview-channel/overview-channel.component.html
+++ b/src/app/overview-channel/overview-channel.component.html
@@ -10,7 +10,7 @@
                         <div class="card-body">
                             <h5 class="card-title mb-0" routerLink="/profile/{{ lastUserRecords[0].userId }}"
                                 role="button">
-                                {{ ls.getUserConnectionName(lastUserRecords[0].userId ?? '') }}
+                                {{ ls.getUserConnectionName(lastUserRecords[0].userId) }}
                             </h5>
                             <table class="table table-dark">
                                 <tbody>
@@ -24,10 +24,10 @@
                                                 </p>
                                             </td>
                                             <td>
-                                                {{ ls.getCasinoName(record.casinoId ?? '') }}
+                                                {{ ls.getCasinoName(record.casinoId) }}
                                             </td>
                                             <td class="d-none d-md-table-cell">
-                                                {{ ls.getUserTypeName(record.recordTypeId ?? '') }}
+                                                {{ ls.getTypeName(record.recordTypeId) }}
                                             </td>
                                             <td class="d-none d-sm-table-cell text-center">
                                                 {{ record.deposit | currency:'EUR':'symbol':'1.2-2' }}
