casino name fix

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -149,7 +149,7 @@
                                     </p>
                                 </td>
                                 <td>
-                                    {{ ls.getCasinoName(record.casinoId') }}
+                                    {{ ls.getCasinoName(record.casinoId) }}
                                 </td>
                                 <td>
                                     {{ ls.getTypeName(record.recordTypeId) }}
