--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -89,7 +89,7 @@
                     Kopieer
                 </div>
             </div>
-            <div class="row" *ngFor="let record of uniqueRecordCombinations()">
+            <div class="row mt-1" *ngFor="let record of uniqueRecordCombinations()">
                 <div class="col-lg-5 col-xxl-6"></div>
                 <div class="col-4 col-sm-3 col-lg-2 col-xxl-1">
                     {{ ls.getCasinoName(record.casinoId) }}
