--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -106,7 +106,8 @@
                 </div>
             </div>
             <hr>
-
+        </div>
+        <div class="row">
             <!-- 
             Table with the records of today
             -->
@@ -231,3 +232,5 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
