--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -74,7 +74,7 @@
             <div *ngIf="createdRecord" class="alert alert-success mt-3 text-center" role="alert">
                 Record aangemaakt!
             </div>
-            <div class="row mt-2 fw-bold" *ngIf="uniqueRecordCombinations().length > 0">
+            <!-- <div class="row mt-2 fw-bold" *ngIf="uniqueRecordCombinations().length > 0">
                 <div class="col-lg-5 col-xxl-6"></div>
                 <div class="col-4 col-sm-3 col-lg-2 col-xxl-1">
                     Casino
@@ -104,8 +104,8 @@
                     <button class="btn btn-sm btn-primary" (click)="copyToForm(record)"><fa-icon
                             [icon]="faCopy"></fa-icon></button>
                 </div>
-            </div>
-            <hr>
+            </div> -->
+            <!-- <hr> -->
         </div>
 
         <!-- 
@@ -115,7 +115,7 @@
             <!-- 
             Table with the records of today
             -->
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-7">
                 <h2>{{ header }}</h2>
                 <p *ngIf="ls.recordsToday.length == 0">Nog geen records vandaag.</p>
                 <table class="table table-dark" *ngIf="ls.recordsToday.length > 0">
@@ -127,6 +127,7 @@
                             <th scope="col" class="text-center d-none d-sm-table-cell">Storting</th>
                             <th scope="col" class="text-center d-none d-sm-table-cell">Opname</th>
                             <th scope="col" class="text-center">Netto</th>
+                            <th scope="col"></th>
                             <th scope="col"></th>
                         </tr>
                     </thead>
@@ -154,9 +155,9 @@
                             </td>
                             <td class="text-center">
                                 <span [ngClass]="{
-                                                            'text-success': record.withdrawal > record.deposit,
-                                                            'text-danger': record.withdrawal < record.deposit
-                                                        }">
+                                    'text-success': record.withdrawal > record.deposit,
+                                    'text-danger': record.withdrawal < record.deposit
+                                }">
                                     {{ (record.withdrawal - record.deposit) | currency:'EUR':'symbol':'1.2-2' }}
                                 </span>
                             </td>
@@ -164,6 +165,12 @@
                                 <ng-container *ngIf="record.notes.length > 0">
                                     <fa-icon [icon]="faComment"></fa-icon>
                                 </ng-container>
+                            </td>
+                            <td>
+                                <button class="btn btn-sm btn-outline-light" (click)="copyToForm(record)"
+                                    *ngIf="isValidUserRecordCombination(record.casinoId, record.recordTypeId)">
+                                    <fa-icon [icon]="faCopy"></fa-icon>
+                                </button>
                             </td>
                         </tr>
                     </tbody>
@@ -173,7 +180,7 @@
             <!-- 
             Table with the results of all players
             -->
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-5">
                 <h2>Resultaat</h2>
                 <table class="table table-dark">
                     <thead>
