--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -37,13 +37,13 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-lg-4">
-                        <app-select label="Casino" [options]="lse.casinosToKeyValue(ls.getUserCasinos())"
-                            placeholder="Selecteer casino" formControlName="casino"></app-select>
+                        <app-select label="Casino" [options]="userCasinos" placeholder="Selecteer casino"
+                            formControlName="casino"></app-select>
                     </div>
 
                     <div class="col-12 col-md-6 col-lg-4">
-                        <app-select label="Type" [options]="lse.recordtypesToKeyValue(ls.getUserTypes())"
-                            placeholder="Selecteer type" formControlName="recordType"></app-select>
+                        <app-select label="Type" [options]="userTypes" placeholder="Selecteer type"
+                            formControlName="recordType"></app-select>
                     </div>
 
                     <div class="col-12 col-lg-8">
@@ -74,38 +74,6 @@
             <div *ngIf="createdRecord" class="alert alert-success mt-3 text-center" role="alert">
                 Record aangemaakt!
             </div>
-            <!-- <div class="row mt-2 fw-bold" *ngIf="uniqueRecordCombinations().length > 0">
-                <div class="col-lg-5 col-xxl-6"></div>
-                <div class="col-4 col-sm-3 col-lg-2 col-xxl-1">
-                    Casino
-                </div>
-                <div class="col-8 col-sm-5 col-lg-3">
-                    Type
-                </div>
-                <div class="col-4 col-sm-2 col-lg-1">
-                    Storting
-                </div>
-                <div class="col-8 col-sm-2 col-lg-1 text-sm-center">
-                    Kopieer
-                </div>
-            </div>
-            <div class="row mt-1" *ngFor="let record of uniqueRecordCombinations()">
-                <div class="col-lg-5 col-xxl-6"></div>
-                <div class="col-4 col-sm-3 col-lg-2 col-xxl-1">
-                    {{ ls.getCasinoName(record.casinoId) }}
-                </div>
-                <div class="col-8 col-sm-5 col-lg-3">
-                    {{ ls.getTypeName(record.recordTypeId) }}
-                </div>
-                <div class="col-4 col-sm-2 col-lg-1">
-                    {{ record.deposit | currency:'EUR':'symbol':'1.2-2' }}
-                </div>
-                <div class="col-8 col-sm-2 col-lg-1 text-sm-center">
-                    <button class="btn btn-sm btn-primary" (click)="copyToForm(record)"><fa-icon
-                            [icon]="faCopy"></fa-icon></button>
-                </div>
-            </div> -->
-            <!-- <hr> -->
         </div>
 
         <!-- 
