--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -30,7 +30,7 @@
         -->
         <div class="col-12">
             <h2>Record aanmaken</h2>
-            <form [formGroup]="form" *ngIf="form">
+            <form [formGroup]="form" *ngIf="form && userTypes.length > 0 && userCasinos.length > 0">
                 <div class="row">
                     <div class="col-12 col-lg-4">
                         <app-date label="Date" [input]="today" formControlName="date"></app-date>
