--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -140,7 +140,7 @@
                 </p>
             </div>
 
-            <div class="table-overflow">
+            <div class="table">
                 <table class="table table-dark border-top">
                     <tbody>
                         <p *ngIf="getFilteredRecords().length == 0">Geen records.</p>
