--- a/src/app/profile/profile.component.less
+++ b/src/app/profile/profile.component.less
@@ -2,7 +2,7 @@
 
 .profile-results {
     max-height: 24rem;
-    background-color:rgba(0, 0, 0, .25);
+    background-color: rgba(0, 0, 0, .25);
     padding: 1rem;
     border-radius: 1rem;
 
@@ -17,10 +17,22 @@
 
 .filter-button {
     display: inline-block;
-    width: calc(~"25% - 0.25rem");;
+
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.filter-button-small {
+    width: calc(~"16.6666666667% - 0.25rem");
+}
+
+.filter-button-normal {
+    width: calc(~"25% - 0.25rem");
+}
+
+.filter-button-wide {
+    width: calc(~"33.3333333333% - 0.25rem");
 }
 
 .table-overflow {
