--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,8 @@
 <div class="container mb-3" *ngIf="userId != undefined">
     <div class="row">
+        <!-- 
+        Bread crumbs
+         -->
         <div class="col-12">
             <h5 class="bread-crumb d-inline-block">Profiel van: {{ ls.getUserConnectionName(userId) }}</h5>
             <div class="float-end">
