--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,49 +1,71 @@
 <div class="container">
-    <div class="row">
-        <div class="row">
-            <!-- 
+    <div class="row" *ngIf="ls.getUserIsAdmin()">
+        <div class="col-12">
+            <h4>Nieuwe casino aanmaken</h4>
+        </div>
+        <div class="col-12 col-md-6">
+            <app-text [formControl]="casinoInput" placeholder="Casino naam" [maxLength]="30"></app-text>
+            <div class="row">
+                <div class="col-12 col-lg-6 col-xxl-9"></div>
+                <div class="col-12 col-lg-6 col-xxl-3">
+                    <button (click)="onSubmitCasino()" class="btn btn-primary w-100 mt-2">Casino opslaan</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-12">
+            <h2>Instellingen</h2>
+        </div>
+        <!-- 
             Connections
              -->
-            <div class="col-12 col-sm-6 col-md-3">
-                <h4>Connections</h4>
-                <ul class="list-group">
-                    <li *ngFor="let user of ls.users" class="list-group-item" (click)="toggleConnection(user.id)"
-                        role="button" [ngClass]="!isConnection(user.id) ? 'filtered' : 'bg-gradient'">
-                        <span class="badge bg-success" *ngIf="isConnection(user.id)">Actief</span>
-                        {{ user.name }}
-                    </li>
-                </ul>
+        <div class="col-12 col-lg-3">
+            <h4>Connections</h4>
+            <div *ngFor="let user of ls.users">
+                <button type="button" class="btn m-1"
+                    [ngClass]="isConnection(user.id) ? 'disabled btn-primary' : 'btn-dark border'"
+                    (click)="toggleConnection(user.id)">Ja</button>
+                <button type="button" class="btn m-1"
+                    [ngClass]="!isConnection(user.id) ? 'disabled btn-primary' : 'btn-dark border'"
+                    (click)="toggleConnection(user.id)">Nee</button>
+                <span class="text-center">{{ user.name }}</span>
             </div>
+        </div>
 
-            <!-- 
+        <!-- 
             Record types
              -->
-            <div class="col-12 col-sm-6 col-lg-4 col-xxl-3">
-                <h4>Types</h4>
-                <ul class="list-group">
-                    <li *ngFor="let type of ls.types" class="list-group-item" (click)="toggleType(type.id)"
-                        role="button" [ngClass]="isIgnoreType(type.id) ? 'filtered' : 'bg-gradient'">
-                        <span class="badge bg-success" *ngIf="!isIgnoreType(type.id)">Actief</span>
-                        {{ type.name }}
-                    </li>
-                </ul>
+        <div class="col-12 col-lg-3">
+            <h4>Types</h4>
+            <div *ngFor="let type of ls.types">
+                <button type="button" class="btn m-1"
+                    [ngClass]="!isIgnoreType(type.id) ? 'disabled btn-primary' : 'btn-dark border'"
+                    (click)="toggleType(type.id)">Ja</button>
+                <button type="button" class="btn m-1"
+                    [ngClass]="isIgnoreType(type.id) ? 'disabled btn-primary' : 'btn-dark border'"
+                    (click)="toggleType(type.id)">Nee</button>
+                <span class="text-center">{{ type.name }}</span>
             </div>
+        </div>
 
-            <!-- 
+        <!-- 
             Casinos
              -->
-            <div class="col-12 col-md-5">
-                <h4>Casinos</h4>
-                <div class="row">
-                    <div class="col-12 col-sm" *ngFor="let _ of [].constructor(2); let i=index;">
-                        <ul class="list-group">
-                            <li *ngFor="let casino of ls.casinos.slice(i*math.ceil(ls.casinos.length/2), i*math.ceil(ls.casinos.length/2) + math.ceil(ls.casinos.length/2))"
-                                class="list-group-item" (click)="toggleCasino(casino.id)" role="button"
-                                [ngClass]="isIgnoreCasino(casino.id) ? 'filtered' : 'bg-gradient'">
-                                <span class="badge bg-success" *ngIf="!isIgnoreCasino(casino.id)">Actief</span>
-                                {{ casino.name }}
-                            </li>
-                        </ul>
+        <div class="col-12 col-md-5">
+            <h4>Casinos</h4>
+            <div class="row">
+                <div class="col-12 col-sm" *ngFor="let _ of [].constructor(2); let i=index;">
+                    <div
+                        *ngFor="let casino of ls.casinos.slice(i*math.ceil(ls.casinos.length/2), i*math.ceil(ls.casinos.length/2) + math.ceil(ls.casinos.length/2))">
+                        <button type="button" class="btn m-1"
+                            [ngClass]="!isIgnoreCasino(casino.id) ? 'disabled btn-primary' : 'btn-dark border'"
+                            (click)="toggleCasino(casino.id)">Ja</button>
+                        <button type="button" class="btn m-1"
+                            [ngClass]="isIgnoreCasino(casino.id) ? 'disabled btn-primary' : 'btn-dark border'"
+                            (click)="toggleCasino(casino.id)">Nee</button>
+                        <span class="text-center">{{ casino.name }}</span>
                     </div>
                 </div>
             </div>
